--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ dependencies = [
     "fastapi[standard] (>=0.115.12,<0.116.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "alembic (>=1.16.4,<2.0.0)"
+    "alembic (>=1.16.4,<2.0.0)",
+    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "tzdata (>=2025.2,<2026.0)"
 ]
 
 
