--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "alembic (>=1.16.4,<2.0.0)",
     "pwdlib[argon2] (>=0.2.1,<0.3.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
-    "tzdata (>=2025.2,<2026.0)"
+    "tzdata (>=2025.2,<2026.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
 
 
@@ -27,6 +28,7 @@ ruff = "^0.11.13"
 pytest = "^8.4.0"
 pytest-cov = "^6.1.1"
 taskipy = "^1.14.1"
+pytest-asyncio = "^1.2.0"
 
 
 [tool.ruff]
@@ -44,6 +46,7 @@ quote-style = 'single'
 [tool.pytest.ini_options]
 pythonpath = "."
 addopts = '-p no:warnings'
+asyncio_default_fixture_loop_scope = 'function'
 
 [tool.taskipy.tasks]
 lint = 'ruff check'
@@ -53,5 +56,8 @@ run = 'fastapi dev fastapi_zero/app.py'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=fastapi_zero -vv'
 post_test = 'coverage html'
+
+[tool.coverage.run]
+concurrency = ["thread", "greenlet"]
 
 
